--- a/package.json
+++ b/package.json
@@ -47,5 +47,10 @@
   "engines": {
     "node": "^16"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "del": "^7.0.0",
+    "gulp-svgmin": "^4.1.0",
+    "postcss-csso": "^6.0.1"
+  }
 }
